# convoy-python

./: .genignore  .gitignore  .openapi-python-client.yml  MIGRATION.md  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  run-tests.yml  sdk_generation.yaml  speakeasy_generation.yaml
convoy/: __init__.py  convoy.py  data.py
convoy/api/: __init__.py  application.py  delivery_attempts.py  endpoint.py  event.py  event_delivery.py  group.py  project.py  source.py  subscription.py
convoy/client/: __init__.py  client.py
convoy/utils/: __init__.py  helpers.py  webhook.py
scripts/: generate.sh
src/: client.py  convoy.py  setup.py
src/api/: application.py  delivery_attempts.py  endpoint.py  event.py  event_delivery.py  group.py
src/convoy/: __init__.py
src/convoy/models/: __init__.py  activate_endpoint_response_202.py  activate_endpoint_response_400.py  activate_endpoint_response_401.py  activate_endpoint_response_404.py  auth_role_type.py  batch_replay_events_direction.py  batch_replay_events_response_200.py  batch_replay_events_response_400.py  batch_replay_events_response_401.py  batch_replay_events_response_404.py  batch_retry_event_delivery_direction.py  batch_retry_event_delivery_response_200.py  batch_retry_event_delivery_response_400.py  batch_retry_event_delivery_response_401.py  batch_retry_event_delivery_response_404.py  bulk_create_filters_response_201.py  bulk_create_filters_response_400.py  (+466 more)
src/utils/: helpers.py
test/: test.py  test_client.py  test_routes.py  test_shared_vectors.py  test_webhook.py
(+69 files in other folders)
